# ShooterGame

./: .gitmodules  CMakeLists.txt
resources/shader/: fragment.glsl
src/: main.cpp
src/Client/: main.cpp
src/Client/GL/Buffer/: Buffer.hpp
src/Client/Game/: Game.cpp  Game.hpp
src/Client/Game/GLManager/: GLManager.cpp  GLManager.hpp
src/Client/Game/GameDataStore/: GameDataStore.cpp  GameDataStore.hpp
src/Common/: PacketTypes.hpp
src/GL/Shader/: Shader.cpp  Shader.hpp
src/Server/: main.cpp
